mariadb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
